Replace text title with MemeKarts logo image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 
                 <!-- Header -->
                 <header class="game-header">
-                    <h1 class="game-title" id="gameTitle">🏎️ Meme Karts Online</h1>
+                    <img src="title.png" alt="Meme Karts" class="game-logo" />
                     <p class="game-tagline" id="gameTagline">Race to the Moon with Crypto Speed!</p>
                 </header>
                 
